Day1/configmapapp.yaml
apiVersion: v1
kind: Pod
metadata:
 name: cm-env-demo
spec:
 containers:
 - name: app
   image: busybox
   command: ["sh", "-c", "echo $LOG_LEVEL $FEATURE_X_ENABLED && sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
 name: cm-envfrom-demo
spec:
 containers:
 - name: app
   image: busybox
   command: ["sh", "-c", "env | grep LOG && sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
 name: cm-vol-demo
spec:
  containers:
  - name: app
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - name: config-volume
      mountPath: /home
  volumes: 
    - name: config-volume
      configMap:
        name: nginx-config
