Day1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
        - name: hello
          image: nginx:1.27
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     cpu: "100m"
          #     memory: "128Mi"
          #   limits:
          #     cpu: "500m"
          #     memory: "256Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
