Day1/initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
 name: init-demo
spec:
 volumes:
 - name: shared-data
   emptyDir: {}
 containers:
 - name: app
   image: busybox
   command: ['sh', '-c', 'echo "App starting..."; cat /data/info.txt; sleep 3600']
   volumeMounts:
   - name: shared-data
     mountPath: /data
