Day1/secretsapp.yaml
apiVersion: v1
kind: Pod
metadata:
 name: env-secret-demo
spec:
  containers:
  - name: app
    image: busybox
    command: ['sh', '-c', 'echo "User: $DB_USER, Pass: $DB_PASS" && sleep 3600']
---
apiVersion: v1
kind: Pod
metadata:
 name: envfrom-secret-demo-all
spec:
  containers:
  - name: app
    image: busybox
    command: ['sh', '-c', 'env | grep DB_ && sleep 3600']
