Day1/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-clusterip
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: hello
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: 80
