Day1/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-loadbalancer
  namespace: demo
spec:
  type: LoadBalancer
  selector:
    app: hello
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: 80
