Day1/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodeport
  namespace: demo
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
